Changed and add some features

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-image: url('https://i.pinimg.com/originals/e5/dd/a4/e5dda4674d1401d0bb65671ba8036037.jpg');
+    background-image: url('https://img-5.fruugo.com/product/8/76/21678768_max.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
