--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-image: url('https://img-5.fruugo.com/product/8/76/21678768_max.jpg');
+    background-image: url('https://s.hdnux.com/photos/77/03/55/16530298/12/1200x0.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
